# fileflow

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: out.txt  text_comd.txt
src/fileflow/: cli.py  core.py  errors.py  io.py  pipeline.py  processors.py
tests/: test_cli.py  test_pipeline.py  test_processors.py
